# digest-tracker

./: .gitignore  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  pages.yml
digest_tracker/: __init__.py  cli.py  config.py  db.py  digest.py  utils.py
digest_tracker/fetchers/: __init__.py  base.py  rss.py  web.py
digest_tracker/publishers/: __init__.py  base.py  local.py
docs/: index.md
tests/: __init__.py  conftest.py  test_cli.py  test_db.py  test_digest.py  test_fetchers.py  test_publishers.py
